--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-supabase==2.0.0
-psycopg2-binary==2.9.7
-python-jose[cryptography]==3.3.0
+pydantic==2.4.2
 python-multipart==0.0.6
-pytest==7.4.3
