🔧 Fix missing dependencies: email-validator & psycopg2

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-pydantic==2.4.2
+pydantic[email]==2.4.2
 python-multipart==0.0.6
 supabase==2.0.0
 postgrest==0.13.0
@@ -8,3 +8,5 @@ python-dotenv==1.0.0
 asyncpg==0.29.0
 sqlalchemy==2.0.23
 python-jose[cryptography]==3.3.0
+psycopg2-binary==2.9.7
+email-validator==2.1.0
