--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ python-multipart==0.0.6
 supabase==2.0.0
 python-dotenv==1.0.0
 sqlalchemy==2.0.23
+pysrt==1.1.2
+webvtt-py==0.4.6
+python-magic==0.4.27
+spacy==3.7.2
+nltk==3.8.1
