--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,9 @@ python-dotenv==1.0.0
 sqlalchemy==2.0.23
 pysrt==1.1.2
 webvtt-py==0.4.6
-python-magic==0.4.27
-spacy==3.7.2
-nltk==3.8.1
+requests==2.31.0
+python-dateutil==2.8.2
+email-validator==2.1.0
+passlib[bcrypt]==1.7.4
+python-jose[cryptography]==3.3.0
+aiofiles==23.2.1
