--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,33 @@
+# Core FastAPI and server dependencies
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic[email]==2.4.2
 python-multipart==0.0.6
+
+# Database and authentication
 supabase==2.0.0
 python-dotenv==1.0.0
 sqlalchemy==2.0.23
+
+# Subtitle processing dependencies
 pysrt==1.1.2
 webvtt-py==0.4.6
+
+# NLP and language processing (for subtitle enrichment)
+spacy==3.7.2
+nltk==3.8.1
+
+# HTTP and utility libraries
 requests==2.31.0
 python-dateutil==2.8.2
+
+# Authentication and security
 email-validator==2.1.0
 passlib[bcrypt]==1.7.4
 python-jose[cryptography]==3.3.0
+
+# File handling
 aiofiles==23.2.1
+
+# Additional utilities for production
+gunicorn==21.2.0
