--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,28 @@ htmlcov/
 *.log
 logs/
 
+
+# CineFluent specific
+archive/
+backups/
+subtitles/temp/
+subtitles/.cache/
+*.log
+
+# Tools output
+tools/__pycache__/
+scripts/__pycache__/
+
+# Development
+.pytest_cache/
+.mypy_cache/
+.coverage
+htmlcov/
+
+# IDE
+.vscode/settings.json
+.idea/
+
+# OS
+.DS_Store
+Thumbs.db
