--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ sqlalchemy==2.0.23
 pysrt==1.1.2
 webvtt-py==0.4.6
 
-# NLP and language processing (for subtitle enrichment)
+# NLP and language processing
 spacy==3.7.2
 nltk==3.8.1
 
@@ -29,5 +29,7 @@ python-jose[cryptography]==3.3.0
 # File handling
 aiofiles==23.2.1
 
-# Additional utilities for production
+# Production server
 gunicorn==21.2.0
+aiohttp==3.9.1
+asyncio-throttle==1.0.2
